# GraphSelect--Advancing-Research-Papers-Semantic-Search-with-Embedding-and-Knowledge-Graphs

./: .gitattributes  AI_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bump_version.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
Runs/: Side_by_Side_Comparison.csv
Runs/DataFromALRS/: part 4.csv
Runs/DataFromConsensus/: 1- How can RAG systems be utilized to enhance the process of automatically updating and maintaining knowledge graphs with the latest information_ - Aug 20, 2024.csv  3- How can LLMs be utilized to discover and correct incorrect information in existing knowledge graphs_ - Aug 20, 2024.csv  (+26 more)
code/: .gitignore  Dockerfile  README.md  VERSION  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  requirements.txt  run_graphselect.bat  run_graphselect.sh
code/backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
code/backend/db/: __init__.py  mysql_service.py  neo4j_schema.py  neo4j_service.py
code/backend/models/: __init__.py  paper.py  progress.py  ranked_paper.py  session.py
code/backend/routers/: __init__.py  papers.py  search.py  sessions.py
code/backend/services/: __init__.py  gemini_service.py  graph_search_service.py  log_service.py  openalex_service.py  rate_limiter.py
code/backend/tests/: __init__.py  conftest.py  test_neo4j_service.py
code/e2e/: test_e2e.py
(+111 files in other folders)
